--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 absl-py==1.4.0
 asgiref==3.7.2
 astunparse==1.6.3
+attrs==23.1.0
 backports.zoneinfo==0.2.1
 cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
 colorama==0.4.6
 Django==4.2.2
+djangorestframework==3.14.0
+drf-spectacular==0.26.2
 filelock==3.12.2
 flatbuffers==23.5.26
 fsspec==2023.6.0
@@ -19,8 +22,11 @@ h5py==3.8.0
 huggingface-hub==0.15.1
 idna==3.4
 importlib-metadata==6.6.0
+importlib-resources==5.12.0
+inflection==0.5.1
 jax==0.4.12
 Jinja2==3.1.2
+jsonschema==4.17.3
 keras==2.12.0
 libclang==16.0.0
 Markdown==3.4.3
@@ -32,10 +38,13 @@ numpy==1.23.5
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.1
+pkgutil_resolve_name==1.3.10
 protobuf==4.23.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyrsistent==0.19.3
 python-dotenv==1.0.0
+pytz==2023.3
 PyYAML==6.0
 regex==2023.6.3
 requests==2.31.0
@@ -59,6 +68,7 @@ tqdm==4.65.0
 transformers==4.30.2
 typing_extensions==4.6.3
 tzdata==2023.3
+uritemplate==4.1.1
 urllib3==1.26.16
 Werkzeug==2.3.6
 wrapt==1.14.1
