--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ Markdown==3.4.3
 MarkupSafe==2.1.3
 ml-dtypes==0.2.0
 mpmath==1.3.0
+mypy-extensions==1.0.0
 networkx==3.1
 numpy==1.23.5
 oauthlib==3.2.2
@@ -42,6 +43,7 @@ pkgutil_resolve_name==1.3.10
 protobuf==4.23.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pyre-extensions==0.0.29
 pyrsistent==0.19.3
 python-dotenv==1.0.0
 pytz==2023.3
@@ -66,10 +68,12 @@ tokenizers==0.13.3
 torch==2.0.1
 tqdm==4.65.0
 transformers==4.30.2
+typing-inspect==0.9.0
 typing_extensions==4.6.3
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.16
 Werkzeug==2.3.6
 wrapt==1.14.1
+xformers==0.0.20
 zipp==3.15.0
