--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.16
 Werkzeug==2.3.6
+whitenoise==6.5.0
 wrapt==1.14.1
 xformers==0.0.20
 zipp==3.15.0
