--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ absl-py==1.4.0
 asgiref==3.7.2
 astunparse==1.6.3
 attrs==23.1.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
